@@ -8,11 +8,10 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
-import java.util.Arrays;
 import net.fabricmc.mappingio.format.Tiny2Reader;
 import net.fabricmc.mappingio.tree.MemoryMappingTree;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
-import org.opentest4j.AssertionFailedError;
 
 public class RemappingTests {
 
@@ -35,31 +34,33 @@ public class RemappingTests {
                 Tiny2Reader.read(reader, tree);
             }
 
-            SourceFixerUpper.create()
-                    .mappings(tree, tree.getNamespaceId("a"), tree.getNamespaceId("b"))
-                    .input(original)
-                    .output(output)
-                    .process();
+            SourceFixerUpper sfu = SourceFixerUpper.create()
+                    .mappings(tree, tree.getNamespaceId("a"), tree.getNamespaceId("b"));
 
-            verifyDirsAreEqual(output, test);
-            verifyDirsAreEqual(test, output);
+            Files.walk(original).forEach(path -> {
+                if (Files.isRegularFile(path)) {
+                    sfu.input(path, output.resolve(original.relativize(path)));
+                }
+            });
+
+            sfu.process();
+
+            verifyDirsAreEqual(output, test, false);
+            verifyDirsAreEqual(test, output, true);
         }
     }
 
-    private static void verifyDirsAreEqual(Path one, Path other) throws IOException {
+    private static void verifyDirsAreEqual(Path one, Path other, boolean flip) throws IOException {
         Files.walkFileTree(one, new SimpleFileVisitor<>() {
             @Override
             public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
                 FileVisitResult result = super.visitFile(file, attrs);
+                Path fileInOther = other.resolve(one.relativize(file));
 
-                Path relativize = one.relativize(file);
-                Path fileInOther = other.resolve(relativize);
-
-                byte[] otherBytes = Files.readAllBytes(fileInOther);
-                byte[] theseBytes = Files.readAllBytes(file);
-
-                if (!Arrays.equals(otherBytes, theseBytes)) {
-                    throw new AssertionFailedError(file + " is not equal to " + fileInOther);
+                if (flip) {
+                    Assertions.assertEquals(Files.readString(file), Files.readString(fileInOther));
+                } else {
+                    Assertions.assertEquals(Files.readString(fileInOther), Files.readString(file));
                 }
 
                 return result;
